// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Control component matches the snapshot 1`] = `
<Control
  isScored={false}
  onMenu={[Function]}
  onSubmit={[Function]}
  scoreRank={0}
  statusText=""
  timerString=""
  tried={Object {}}
  words={Object {}}
  wordsToNextLevel={0}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <react-native-mock>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "maxWidth": 355.7647058823529,
            "overflow": "visible",
          }
        }
      >
        <react-native-mock>
          <View
            style={
              Object {
                "flex": 4,
                "marginLeft": 5.647058823529411,
              }
            }
          >
            <react-native-mock>
              <Image
                source={
                  Object {
                    "testUri": "src/images/leftPapers.png",
                  }
                }
                style={
                  Object {
                    "height": 677.6470588235294,
                    "position": "absolute",
                    "right": -22.588235294117645,
                    "top": -5.647058823529411,
                    "width": 338.8235294117647,
                  }
                }
              >
                <react-native-mock />
              </Image>
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <react-native-mock>
                  <ListView
                    contentContainerStyle={
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                          "overflow": "visible",
                        },
                        Object {
                          "paddingBottom": 915,
                        },
                      ]
                    }
                    dataSource={
                      ListViewDataSource {
                        "_dataBlob": Array [
                          Object {
                            "style": "neutral",
                            "word": "No words",
                          },
                        ],
                      }
                    }
                    enableEmptySections={true}
                    overScrollMode="never"
                    renderFooter={[Function]}
                    renderHeader={[Function]}
                    renderRow={[Function]}
                    renderScrollComponent={[Function]}
                    scrollRenderAheadDistance={500}
                    showsVerticalScrollIndicator={false}
                  >
                    <react-native-mock />
                  </ListView>
                </react-native-mock>
              </View>
              <Image
                source={
                  Object {
                    "testUri": "src/images/bluePaper.png",
                  }
                }
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "bottom": -399.81176470588235,
                    "height": 451.7647058823529,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": -16.941176470588236,
                    "width": 564.7058823529412,
                  }
                }
              >
                <react-native-mock />
              </Image>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 5.647058823529411,
                    "flex": 1,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <react-native-mock>
                  <Text
                    style={
                      Object {
                        "color": "#444",
                        "fontFamily": "RujisHandwritingFontv.2.0",
                        "fontSize": 16.941176470588236,
                        "margin": 5.647058823529411,
                      }
                    }
                  >
                    <react-native-mock>
                      0 / 0
                    </react-native-mock>
                  </Text>
                </react-native-mock>
              </View>
            </react-native-mock>
          </View>
          <View
            style={
              Object {
                "flex": 6,
                "justifyContent": "space-between",
                "marginBottom": 11.294117647058822,
                "marginLeft": 11.294117647058822,
                "marginTop": 11.294117647058822,
              }
            }
          >
            <react-native-mock>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 67.76470588235294,
                    "justifyContent": "center",
                    "marginLeft": 6.776470588235294,
                  }
                }
              >
                <react-native-mock>
                  <ImageBackground
                    fadeDuration={0}
                    resizeMode="stretch"
                    source={
                      Object {
                        "testUri": "src/images/whitePanel.png",
                      }
                    }
                    style={
                      Object {
                        "alignItems": "center",
                        "alignSelf": "stretch",
                        "flex": 1,
                        "height": null,
                        "justifyContent": "center",
                        "width": null,
                      }
                    }
                  >
                    <react-native-mock>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                            "paddingBottom": 4.517647058823529,
                            "paddingLeft": 11.294117647058822,
                            "paddingRight": 11.294117647058822,
                          }
                        }
                      >
                        <react-native-mock>
                          <Text
                            style={
                              Object {
                                "color": "#888",
                                "fontFamily": "RujisHandwritingFontv.2.0",
                                "fontSize": 22.588235294117645,
                                "textAlign": "center",
                              }
                            }
                          >
                            <react-native-mock>
                              Perfect!
                            </react-native-mock>
                          </Text>
                        </react-native-mock>
                      </View>
                    </react-native-mock>
                  </ImageBackground>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "height": 39.529411764705884,
                    "justifyContent": "center",
                  }
                }
              >
                <react-native-mock>
                  <Button
                    colour="blue"
                    content="Input word"
                    onPress={[Function]}
                  >
                    <View
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    >
                      <react-native-mock>
                        <Image
                          fadeDuration={0}
                          resizeMode="stretch"
                          source={
                            Object {
                              "testUri": "src/images/buttonBlueActive.png",
                            }
                          }
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "height": undefined,
                                "justifyContent": "center",
                                "marginRight": -4.517647058823529,
                                "width": undefined,
                              },
                              Object {
                                "opacity": 0,
                              },
                            ]
                          }
                        >
                          <react-native-mock />
                        </Image>
                        <Image
                          fadeDuration={0}
                          resizeMode="stretch"
                          source={
                            Object {
                              "testUri": "src/images/buttonBluePassive.png",
                            }
                          }
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "height": undefined,
                                "justifyContent": "center",
                                "marginRight": -4.517647058823529,
                                "width": undefined,
                              },
                              Object {
                                "opacity": 1,
                              },
                            ]
                          }
                        >
                          <react-native-mock />
                        </Image>
                        <TouchableWithoutFeedback
                          onPress={[Function]}
                          onPressIn={[Function]}
                          onPressOut={[Function]}
                        >
                          <react-native-mock>
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "justifyContent": "center",
                                  "paddingBottom": 2.2588235294117647,
                                  "paddingLeft": 13.552941176470588,
                                  "paddingRight": 13.552941176470588,
                                  "paddingTop": 9.035294117647059,
                                }
                              }
                            >
                              <react-native-mock>
                                <Text
                                  style={
                                    Object {
                                      "color": "#000000",
                                      "fontFamily": "Grundschrift-Bold",
                                      "fontSize": 22.588235294117645,
                                      "marginBottom": 16.941176470588236,
                                    }
                                  }
                                >
                                  <react-native-mock>
                                    INPUT WORD
                                  </react-native-mock>
                                </Text>
                              </react-native-mock>
                            </View>
                          </react-native-mock>
                        </TouchableWithoutFeedback>
                      </react-native-mock>
                    </View>
                  </Button>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 33.88235294117647,
                    "justifyContent": "center",
                    "marginLeft": 6.776470588235294,
                  }
                }
              >
                <react-native-mock>
                  <ImageBackground
                    fadeDuration={0}
                    resizeMode="stretch"
                    source={
                      Object {
                        "testUri": "src/images/whitePanel.png",
                      }
                    }
                    style={
                      Object {
                        "alignItems": "center",
                        "alignSelf": "stretch",
                        "flex": 1,
                        "height": null,
                        "justifyContent": "center",
                        "width": null,
                      }
                    }
                  >
                    <react-native-mock>
                      <Text
                        style={
                          Object {
                            "color": "#000",
                            "fontFamily": "RujisHandwritingFontv.2.0",
                            "fontSize": 22.588235294117645,
                          }
                        }
                      >
                        <react-native-mock>
                          Not timed
                        </react-native-mock>
                      </Text>
                    </react-native-mock>
                  </ImageBackground>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 67.76470588235294,
                    "justifyContent": "center",
                    "marginLeft": 6.776470588235294,
                  }
                }
              >
                <react-native-mock>
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "justifyContent": "space-around",
                        "width": "100%",
                      }
                    }
                  >
                    <react-native-mock>
                      <View
                        style={
                          Object {
                            "height": 62.11764705882353,
                            "width": 62.11764705882353,
                          }
                        }
                      >
                        <react-native-mock>
                          <Image
                            source={
                              Object {
                                "testUri": "src/images/starInactive.png",
                              }
                            }
                            style={
                              Object {
                                "height": null,
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock />
                          </Image>
                        </react-native-mock>
                      </View>
                      <View
                        style={
                          Object {
                            "height": 62.11764705882353,
                            "width": 62.11764705882353,
                          }
                        }
                      >
                        <react-native-mock>
                          <Image
                            source={
                              Object {
                                "testUri": "src/images/starInactive.png",
                              }
                            }
                            style={
                              Object {
                                "height": null,
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock />
                          </Image>
                        </react-native-mock>
                      </View>
                      <View
                        style={
                          Object {
                            "height": 62.11764705882353,
                            "width": 62.11764705882353,
                          }
                        }
                      >
                        <react-native-mock>
                          <Image
                            source={
                              Object {
                                "testUri": "src/images/starInactive.png",
                              }
                            }
                            style={
                              Object {
                                "height": null,
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock />
                          </Image>
                        </react-native-mock>
                      </View>
                    </react-native-mock>
                  </View>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "height": 39.529411764705884,
                    "justifyContent": "center",
                  }
                }
              >
                <react-native-mock>
                  <Button
                    colour="yellow"
                    content="Game menu"
                    onPress={[Function]}
                  >
                    <View
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    >
                      <react-native-mock>
                        <Image
                          fadeDuration={0}
                          resizeMode="stretch"
                          source={
                            Object {
                              "testUri": "src/images/buttonYellowActive.png",
                            }
                          }
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "height": undefined,
                                "justifyContent": "center",
                                "marginRight": -4.517647058823529,
                                "width": undefined,
                              },
                              Object {
                                "opacity": 0,
                              },
                            ]
                          }
                        >
                          <react-native-mock />
                        </Image>
                        <Image
                          fadeDuration={0}
                          resizeMode="stretch"
                          source={
                            Object {
                              "testUri": "src/images/buttonYellowPassive.png",
                            }
                          }
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "height": undefined,
                                "justifyContent": "center",
                                "marginRight": -4.517647058823529,
                                "width": undefined,
                              },
                              Object {
                                "opacity": 1,
                              },
                            ]
                          }
                        >
                          <react-native-mock />
                        </Image>
                        <TouchableWithoutFeedback
                          onPress={[Function]}
                          onPressIn={[Function]}
                          onPressOut={[Function]}
                        >
                          <react-native-mock>
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "justifyContent": "center",
                                  "paddingBottom": 2.2588235294117647,
                                  "paddingLeft": 13.552941176470588,
                                  "paddingRight": 13.552941176470588,
                                  "paddingTop": 9.035294117647059,
                                }
                              }
                            >
                              <react-native-mock>
                                <Text
                                  style={
                                    Object {
                                      "color": "#000000",
                                      "fontFamily": "Grundschrift-Bold",
                                      "fontSize": 22.588235294117645,
                                      "marginBottom": 16.941176470588236,
                                    }
                                  }
                                >
                                  <react-native-mock>
                                    GAME MENU
                                  </react-native-mock>
                                </Text>
                              </react-native-mock>
                            </View>
                          </react-native-mock>
                        </TouchableWithoutFeedback>
                      </react-native-mock>
                    </View>
                  </Button>
                </react-native-mock>
              </View>
            </react-native-mock>
          </View>
        </react-native-mock>
      </View>
    </react-native-mock>
  </View>
</Control>
`;

exports[`Control component matches the snapshot 2`] = `
<Control
  isScored={true}
  onMenu={[Function]}
  onSubmit={[Function]}
  scoreRank={0}
  scoreText="Nice!"
  selectedLetters="akdc"
  statusText="Game scored"
  timerString="1m 20s"
  tried={
    Object {
      "alit": true,
      "asdf": false,
      "bail": true,
      "built": true,
      "yrasd": false,
    }
  }
  words={
    Object {
      "alit": true,
      "bail": true,
      "built": true,
      "hail": true,
      "halt": true,
      "haul": true,
      "tail": true,
    }
  }
  wordsToNextLevel={5}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <react-native-mock>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "maxWidth": 355.7647058823529,
            "overflow": "visible",
          }
        }
      >
        <react-native-mock>
          <View
            style={
              Object {
                "flex": 4,
                "marginLeft": 5.647058823529411,
              }
            }
          >
            <react-native-mock>
              <Image
                source={
                  Object {
                    "testUri": "src/images/leftPapers.png",
                  }
                }
                style={
                  Object {
                    "height": 677.6470588235294,
                    "position": "absolute",
                    "right": -22.588235294117645,
                    "top": -5.647058823529411,
                    "width": 338.8235294117647,
                  }
                }
              >
                <react-native-mock />
              </Image>
              <View
                onLayout={[Function]}
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <react-native-mock>
                  <ListView
                    contentContainerStyle={
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                          "overflow": "visible",
                        },
                        Object {
                          "paddingBottom": 640,
                        },
                      ]
                    }
                    dataSource={
                      ListViewDataSource {
                        "_dataBlob": Array [
                          Object {
                            "style": "neutral",
                            "word": "Not found:",
                          },
                          Object {
                            "style": "neutral",
                            "word": "hail",
                          },
                          Object {
                            "style": "neutral",
                            "word": "halt",
                          },
                          Object {
                            "style": "neutral",
                            "word": "haul",
                          },
                          Object {
                            "style": "neutral",
                            "word": "tail",
                          },
                          Object {
                            "style": "neutral",
                            "word": " ",
                          },
                          Object {
                            "style": "neutral",
                            "word": "Your words:",
                          },
                          Object {
                            "style": "correct",
                            "word": "alit",
                          },
                          Object {
                            "style": "incorrect",
                            "word": "asdf",
                          },
                          Object {
                            "style": "correct",
                            "word": "bail",
                          },
                          Object {
                            "style": "correct",
                            "word": "built",
                          },
                          Object {
                            "style": "incorrect",
                            "word": "yrasd",
                          },
                        ],
                      }
                    }
                    enableEmptySections={true}
                    overScrollMode="never"
                    renderFooter={[Function]}
                    renderHeader={[Function]}
                    renderRow={[Function]}
                    renderScrollComponent={[Function]}
                    scrollRenderAheadDistance={500}
                    showsVerticalScrollIndicator={false}
                  >
                    <react-native-mock />
                  </ListView>
                </react-native-mock>
              </View>
              <Image
                source={
                  Object {
                    "testUri": "src/images/bluePaper.png",
                  }
                }
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "bottom": -399.81176470588235,
                    "height": 451.7647058823529,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": -16.941176470588236,
                    "width": 564.7058823529412,
                  }
                }
              >
                <react-native-mock />
              </Image>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 5.647058823529411,
                    "flex": 1,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <react-native-mock>
                  <Text
                    style={
                      Object {
                        "color": "#444",
                        "fontFamily": "RujisHandwritingFontv.2.0",
                        "fontSize": 16.941176470588236,
                        "margin": 5.647058823529411,
                      }
                    }
                  >
                    <react-native-mock>
                      3 / 7
                    </react-native-mock>
                  </Text>
                </react-native-mock>
              </View>
            </react-native-mock>
          </View>
          <View
            style={
              Object {
                "flex": 6,
                "justifyContent": "space-between",
                "marginBottom": 11.294117647058822,
                "marginLeft": 11.294117647058822,
                "marginTop": 11.294117647058822,
              }
            }
          >
            <react-native-mock>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 67.76470588235294,
                    "justifyContent": "center",
                    "marginLeft": 6.776470588235294,
                  }
                }
              >
                <react-native-mock>
                  <ImageBackground
                    fadeDuration={0}
                    resizeMode="stretch"
                    source={
                      Object {
                        "testUri": "src/images/whitePanel.png",
                      }
                    }
                    style={
                      Object {
                        "alignItems": "center",
                        "alignSelf": "stretch",
                        "flex": 1,
                        "height": null,
                        "justifyContent": "center",
                        "width": null,
                      }
                    }
                  >
                    <react-native-mock>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                            "paddingBottom": 4.517647058823529,
                            "paddingLeft": 11.294117647058822,
                            "paddingRight": 11.294117647058822,
                          }
                        }
                      >
                        <react-native-mock>
                          <Text
                            style={
                              Object {
                                "color": "#444",
                                "fontFamily": "RujisHandwritingFontv.2.0",
                                "fontSize": 22.588235294117645,
                                "textAlign": "center",
                              }
                            }
                          >
                            <react-native-mock>
                              Game scored
                            </react-native-mock>
                          </Text>
                        </react-native-mock>
                      </View>
                    </react-native-mock>
                  </ImageBackground>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "height": 39.529411764705884,
                    "justifyContent": "center",
                  }
                }
              >
                <react-native-mock>
                  <Button
                    colour="blue"
                    content="Input word"
                    onPress={[Function]}
                  >
                    <View
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    >
                      <react-native-mock>
                        <Image
                          fadeDuration={0}
                          resizeMode="stretch"
                          source={
                            Object {
                              "testUri": "src/images/buttonBlueActive.png",
                            }
                          }
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "height": undefined,
                                "justifyContent": "center",
                                "marginRight": -4.517647058823529,
                                "width": undefined,
                              },
                              Object {
                                "opacity": 0,
                              },
                            ]
                          }
                        >
                          <react-native-mock />
                        </Image>
                        <Image
                          fadeDuration={0}
                          resizeMode="stretch"
                          source={
                            Object {
                              "testUri": "src/images/buttonBluePassive.png",
                            }
                          }
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "height": undefined,
                                "justifyContent": "center",
                                "marginRight": -4.517647058823529,
                                "width": undefined,
                              },
                              Object {
                                "opacity": 1,
                              },
                            ]
                          }
                        >
                          <react-native-mock />
                        </Image>
                        <TouchableWithoutFeedback
                          onPress={[Function]}
                          onPressIn={[Function]}
                          onPressOut={[Function]}
                        >
                          <react-native-mock>
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "justifyContent": "center",
                                  "paddingBottom": 2.2588235294117647,
                                  "paddingLeft": 13.552941176470588,
                                  "paddingRight": 13.552941176470588,
                                  "paddingTop": 9.035294117647059,
                                }
                              }
                            >
                              <react-native-mock>
                                <Text
                                  style={
                                    Object {
                                      "color": "#000000",
                                      "fontFamily": "Grundschrift-Bold",
                                      "fontSize": 22.588235294117645,
                                      "marginBottom": 16.941176470588236,
                                    }
                                  }
                                >
                                  <react-native-mock>
                                    INPUT WORD
                                  </react-native-mock>
                                </Text>
                              </react-native-mock>
                            </View>
                          </react-native-mock>
                        </TouchableWithoutFeedback>
                      </react-native-mock>
                    </View>
                  </Button>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 33.88235294117647,
                    "justifyContent": "center",
                    "marginLeft": 6.776470588235294,
                  }
                }
              >
                <react-native-mock>
                  <ImageBackground
                    fadeDuration={0}
                    resizeMode="stretch"
                    source={
                      Object {
                        "testUri": "src/images/whitePanel.png",
                      }
                    }
                    style={
                      Object {
                        "alignItems": "center",
                        "alignSelf": "stretch",
                        "flex": 1,
                        "height": null,
                        "justifyContent": "center",
                        "width": null,
                      }
                    }
                  >
                    <react-native-mock>
                      <Text
                        style={
                          Object {
                            "color": "#000",
                            "fontFamily": "RujisHandwritingFontv.2.0",
                            "fontSize": 22.588235294117645,
                          }
                        }
                      >
                        <react-native-mock>
                          1m 20s
                        </react-native-mock>
                      </Text>
                    </react-native-mock>
                  </ImageBackground>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 67.76470588235294,
                    "justifyContent": "center",
                    "marginLeft": 6.776470588235294,
                  }
                }
              >
                <react-native-mock>
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "justifyContent": "space-around",
                        "width": "100%",
                      }
                    }
                  >
                    <react-native-mock>
                      <View
                        style={
                          Object {
                            "height": 62.11764705882353,
                            "width": 62.11764705882353,
                          }
                        }
                      >
                        <react-native-mock>
                          <Image
                            source={
                              Object {
                                "testUri": "src/images/starInactive.png",
                              }
                            }
                            style={
                              Object {
                                "height": null,
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock />
                          </Image>
                        </react-native-mock>
                      </View>
                      <View
                        style={
                          Object {
                            "height": 62.11764705882353,
                            "width": 62.11764705882353,
                          }
                        }
                      >
                        <react-native-mock>
                          <Image
                            source={
                              Object {
                                "testUri": "src/images/starInactive.png",
                              }
                            }
                            style={
                              Object {
                                "height": null,
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock />
                          </Image>
                        </react-native-mock>
                      </View>
                      <View
                        style={
                          Object {
                            "height": 62.11764705882353,
                            "width": 62.11764705882353,
                          }
                        }
                      >
                        <react-native-mock>
                          <Image
                            source={
                              Object {
                                "testUri": "src/images/starInactive.png",
                              }
                            }
                            style={
                              Object {
                                "height": null,
                                "width": null,
                              }
                            }
                          >
                            <react-native-mock />
                          </Image>
                        </react-native-mock>
                      </View>
                    </react-native-mock>
                  </View>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "height": 39.529411764705884,
                    "justifyContent": "center",
                  }
                }
              >
                <react-native-mock>
                  <Button
                    colour="yellow"
                    content="Game menu"
                    onPress={[Function]}
                  >
                    <View
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    >
                      <react-native-mock>
                        <Image
                          fadeDuration={0}
                          resizeMode="stretch"
                          source={
                            Object {
                              "testUri": "src/images/buttonYellowActive.png",
                            }
                          }
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "height": undefined,
                                "justifyContent": "center",
                                "marginRight": -4.517647058823529,
                                "width": undefined,
                              },
                              Object {
                                "opacity": 0,
                              },
                            ]
                          }
                        >
                          <react-native-mock />
                        </Image>
                        <Image
                          fadeDuration={0}
                          resizeMode="stretch"
                          source={
                            Object {
                              "testUri": "src/images/buttonYellowPassive.png",
                            }
                          }
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "height": undefined,
                                "justifyContent": "center",
                                "marginRight": -4.517647058823529,
                                "width": undefined,
                              },
                              Object {
                                "opacity": 1,
                              },
                            ]
                          }
                        >
                          <react-native-mock />
                        </Image>
                        <TouchableWithoutFeedback
                          onPress={[Function]}
                          onPressIn={[Function]}
                          onPressOut={[Function]}
                        >
                          <react-native-mock>
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "justifyContent": "center",
                                  "paddingBottom": 2.2588235294117647,
                                  "paddingLeft": 13.552941176470588,
                                  "paddingRight": 13.552941176470588,
                                  "paddingTop": 9.035294117647059,
                                }
                              }
                            >
                              <react-native-mock>
                                <Text
                                  style={
                                    Object {
                                      "color": "#000000",
                                      "fontFamily": "Grundschrift-Bold",
                                      "fontSize": 22.588235294117645,
                                      "marginBottom": 16.941176470588236,
                                    }
                                  }
                                >
                                  <react-native-mock>
                                    GAME MENU
                                  </react-native-mock>
                                </Text>
                              </react-native-mock>
                            </View>
                          </react-native-mock>
                        </TouchableWithoutFeedback>
                      </react-native-mock>
                    </View>
                  </Button>
                </react-native-mock>
              </View>
            </react-native-mock>
          </View>
        </react-native-mock>
      </View>
    </react-native-mock>
  </View>
</Control>
`;
